:heavy_plus_sign::art: Add new type per location relation and filter plus seeder and stuff
